--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form id='form'>      
+        <h1 class="welcome">Привет! Заполни анкету</h1>
         <input name="name" type="text" class="feedback-input" placeholder="Имя" />   
         <input name="email" type="text" class="feedback-input" placeholder="Почта" />
         <textarea name="text" class="feedback-input" placeholder="Сообщение"></textarea>
