--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <form id='form'>      
-        <h1 class="welcome">Привет! Заполни анкету</h1>
+        <h1 class="welcome_name">Привет!</h1>
+        <h1 class="welcome">Заполни анкету</h1>
         <input name="name" type="text" class="feedback-input" placeholder="Имя" />   
         <input name="email" type="text" class="feedback-input" placeholder="Почта" />
         <textarea name="text" class="feedback-input" placeholder="Сообщение"></textarea>
